Payments and Seeder details

--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,8 @@
     "require": {
         "php": "^7.3|^8.0",
         "fruitcake/laravel-cors": "^2.0",
+        "google/cloud-error-reporting": "^0.18.4",
+        "google/cloud-logging": "^1.22",
         "google/cloud-storage": "^1.25",
         "guzzlehttp/guzzle": "^7.0.1",
         "laravel/framework": "^8.54",
